--- a/Story 02/내가 만든 프로그램의 속도를 알고 싶다./김정인.md
+++ b/Story 02/내가 만든 프로그램의 속도를 알고 싶다./김정인.md
@@ -80,8 +80,21 @@
 
 
 ---
+## System.currentTimeMillis 와 System.nanoTime
+- static long currentTimeMillis()
+  - 현재의 시간을 ms 로 리턴한다. (1/1,000초).
+- static long nanoTime()
+  - 현재 시간을 ns로 리턴한다. (1/1,000,000,000초)
+
+
+### 작성된 메서드의 성능을 측정하는 방법
+- JMH
+- Caliper
+- JUnitPerf
+- JUnitBench
+- ContiPerf
 
 # 느낀점
 ---
 
-- 
+- Java 안의 내장함수를 통해서도 성능 테스트를 할 수 있는 방법을 제시해주고 있다.
