--- a/Story 03/왜 자꾸 String을 쓰지 말라는 거야?/김정인.md
+++ b/Story 03/왜 자꾸 String을 쓰지 말라는 거야?/김정인.md
@@ -5,10 +5,25 @@
 - 클래스별, 메서드별 응답시간을 알 수 있으면 성능 튜닝에 도움이 된다.
 
 
-|제목|내용|
+|생성자|내용|
 |---|---|
 | StringBuffer()                  | 아무값도 없는 StringBuffer 객체를 생성한다. 기본 용량은 16개의 char이다.        |
 | StringBuffer(CharSequence seq)  | CharSequence 를 매개변수로 받아 그 seq 값을 갖는 StringBuffer를 생성한다.     |
 | StringBuffer(int capacity)      | capacity 에 지정한 만큼의 용량을 갖는 StringBuffer를 생성한다.               |
 | StringBuffer(String str)        | str의 값을 갖는 StringBuffer 를 생성한다.                                |
 
+---
+
+## String vs StringBuffer vs StringBuilder
+- String 클래스로 문자열을 + 기를 실행하면, 객체를 생성하는 것이기 대문에 임시 객체수와 메모리 사용량이 급격하게 증가된다.
+- 그러나 StringBuilder, StringBuffer 의 append를 사용하면, 처음 해당 문잦의 메모리 주소안에서 값만 더해지기 때문에 객체와 메모리측면에서 성능이 뛰어나다.
+- String 은 짧은 문자열을 더할 경우에만 사용한다.
+- StringBuffer 는 스레드에 안전한 프로그램이 필요할 때나, 개발중인 시스템의 부분이 스레드에 안전한지 모를 경우 사용하면 좋다.
+- StringBuilder 는 스레드에 안전한지 여부와 전혀 관계없는 프로그램을 개발할 때 사용하면 좋다.
+
+
+# 느낀점
+---
+
+- 하나의 메서드 단위, String 객체마다 성능을 측정하고 올바르게 사용할 수 있는 습관을 가질 수 있으면 좋겠다.
+- 불변객체와 성능은 대척점에 있는 것일까? 우리는 어떤 기준에서 활용해야할 것인가?
