docs 13: 김동인 정리글 업로드

--- a/Story 13/XML과 JSON도 잘 쓰자./김동인.md
+++ b/Story 13/XML과 JSON도 잘 쓰자./김동인.md
@@ -1,1 +1,95 @@
+# Overview
 
+- 각종 설정 파일과 DB 쿼리를 XML에서 관리하는경우가 많다
+- 데이터를 XML 및 JSON 타입으로 주고받는 시스템도 늘어난다
+- XML이나 JSON이 성능에 영향을 끼칠 수 있다.
+
+# 자바에서 사용하는 XML 파서 종류는
+
+- XML은 eXtensible Markup Language 약자이다.
+- 누구나 데이터의 구조를 정의하고 그 정의된 구조를 공유함으로써 일관된 데이터 전송 및 처리를 할 수 있다.
+- 데이터를 파싱(Parsing)해야한다.
+
+> 마크업 언어(Markup Language)란 태그 기반의 텍스트로 된 언어를 의미한다. 태그 안에 필요한 데이터를 추가함으로써 데이터를 전달하거나 보여주는 것이 주 목적이다. 가장 유명한 마크업 언어로는 HTML이 있다. HTML도 미리 선언되어있는 태그안에 데이터를 입력하여 처리하기 떄문이다.
+
+- 자바에서는 XML을 파싱하기 위해 JAXP를 제공한다.
+- JAXP는 SAX, DOM, XSLT에서 사용하는 기본 API를 제공한다.
+
+| 약어 | 의미 | 패키지 |
+| --- | --- | --- |
+| JAXP | Java API for XML Processing | javax.xml.parsers |
+| SAX | Simple API for XML | org.xml.sax |
+| DOM | Document Object Model | org.w3c.dom |
+| XSLT | Xml Stylesheet Language for Transformations | javax.xml.transaform |
+
+![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/2bf5a1b0-0908-4ca5-9238-9429be1d0e8b/Untitled.png)
+
+![Untitled](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/79d26263-5287-46ca-a638-a0c2045c024a/Untitled.png)
+
+- SAX는 순차적 방식으로 XML 처리
+    - 이미 읽은 데이터의 구조를 수정하거나 삭제하기 어렵다.
+- DOM은 모든 XML을 읽어서 트리로 만든 후 XML을 처리
+    - 읽은 XML을 통하여 노드를 추가, 수정, 삭제하기 쉬운 구조로 되어있다.
+- XSLT는 SAX, DOM, InputStream을 통해서 들어온 데이터를 원하는 형태의 화면으로 구성하는 작업을 수행
+    
+    
+
+# SAX 파서는 어떻게 사용할까?
+
+- SAX는 순차적으로 처리하는 이벤트 기반의 모델이다.
+- 모든 이벤트를 다 처리할 필요는 없지만 원하는 데이터를 만들려면 데이터를 어떻게 처리할지 결정해서 구현해야 한다.
+
+- `SAXParserFactory`
+    - 파싱을 하는 파서 객체를 생성하기 위한 추상 클래스이다.
+- `SAXParser`
+    - 여러 종류의 parse() 메서드를 제공하는 추상 클래스이다. 이 클래스의 parse() 메서드를 호출하면 파싱을 실시한다.
+- `DefaultHandler`
+    - 아래에 있는 `ContentHandler`, `ErrorHandler`, `DTDHandler`, `EntityResolver`를 구현한 클래스이다. 상황에 따라 XML을 처리하려면 이 클래스를 구현하면 된다.
+- `ContentHandler`
+    - XML의 태그의 내용을 읽기 위한 메서드를 정의한 인터페이스이다. `startDocument`, `endDocument`, `startElement`, `endElement` 메서드가 정의되어 있다.
+- `ErrorHandler`
+    - 에러를 처리하는 메서드가 정의되어 있는 인터페이스이다.
+- `DTDHandler`
+    - 기본 DTD 관련 이벤트를 식별하기 위한 인터페이스이다.
+- `EntityResolve`
+    - URI를 통한 식별을 하기 위한 인터페이스이다.
+
+# DOM 파서는 어떻게 사용할까?
+
+- DOM 파서는 SAX 파서와 다르게 XML을 트리 형태의 데이터로 만든 후 그 데이터를 가공하는 방식을 사용한다.
+
+- DocumentBuilderFactory
+    - 파싱을 하는 파서 객체를 생성하기 위한 추상 클래스
+- DocumentBuilder
+    - 여러 종류의 parse() 메서드를 제공하는 추상 클래스, 이 클래스의 parse() 메서드를 호출하면 파싱을 실시
+- Document
+    - SAX와 다르게 파싱을 처리한 결과를 저장하는 클래스
+- Node
+    - XML과 관련된 모든 데이터의 상위 인터페이스, 단일 노드에 대한 정보를 포함
+    
+
+데이터의 크기가 커질 수록 DOM 파서에서 처리하는 시간은 늘어난다. XML 기반으로 처리하기 위해서는 좋은 CPU를 사용해야 한다. SAX 파서는 XML 파일 크기의 두 배의 메모리를 DOM 파서는 거의 10배의 메모리를 사용한다. XML 파일의 크기가 클 때 DOM 파서를 사용하면 OOME가 발생할 수 있다.
+
+# XML 파서가 문제가 된 사례
+
+> 힙 텀프는 현재 JVM의 힙 메모리에서 점유하고 있는 객체에 대한 정보를 파일로 생성한 것. OutOfMemoryError가 발생했을 때 자동으로 힙 덤프를 저장하도록 하려면 “-XX:+HeapDumpOnOutOfMemoryError” 옵션을 추가하면 되고 힙 덤프가 발생하는 경로를 지정하고자 할 경우에는 “-XX:HeapDumpPath=/app/tomcat/dump/”와 같이 저장하는 경로를 추가하면 된다.
+
+- 대부분의 WAS에는 파서가 내장되어 있다. WAS의 파서에 있는 버그를 고치지 않고 오픈 소스에 있는 파서를 사용하면 에러를 고칠 수 있다.
+
+# JSON과 파서들
+
+- JSON은 XML 다음으로 유명한 데이터 교환 형식 중 하나이다.
+- JSON 데이터는 두 가지의 구조를 기본으로 한다.
+    - name/value 형태의 쌍으로 collection 타입
+    - 값의 순서가 있는 목록 타입
+- JSON도 CPU와 메모리를 점유하며 응답 시간도 느리다.
+- JSON 파싱이 기본적으로 XML보다 빠르지만 데이터를 전송하기 위해 XML 및 JSON 데이터를 Serialize 및 Deserialize를 하는 경우가 있다.
+
+> Serialize는 데이터를 전송할 수 있는 상태로 처리하는 것을 말하고 Deserialize는 전송 받은 데이터를 사용 가능한 상태로 처리하는 것을 말한다.
+
+- JSON 데이터는 Serialize와 Deserialize를 처리하는 성능이 좋지 않다.
+- 그래서 이를 해결하는 기술이 많이 등장했다.
+
+# 데이터 전송을 빠르게 하는 라이브러리 소개
+
+- 현재 Jackson 라이브러리를 사용하고 있어 다른 라이브러리를 알 필요가 없다.
