--- a/Story 14/서버를 어떻게 세팅해야 할까?/김동인.md
+++ b/Story 14/서버를 어떻게 세팅해야 할까?/김동인.md
@@ -63,3 +63,23 @@
 
 - DB Connection Pool과 스레드 개수는 메모리와 관련이 있다. 많이 사용할수록 메모리를 많이 점유하게 된다.
 - 메모리를 위해서 DB Connection Pool과 스레드 개수를 적게 지정하면 서버에서 많은 요청을 처리하지 못하고 대기할 수 있다.
+- 운영중에 최소 및 최대값을 동일하게 하는 것이 좋다. 대부분 WAS에서 두 설정 값의 기본 개수가 10~20개이다.
+- DB Connection Pool은 보통 40~50개로 지정하며 스레드 개수는 이보다 10개정도 더 지정한다.
+    - 스레드는 입구이고 DB Connection Pool은 출구라고 생각하자.
+- DB Connection Pool의 개수를 넘어섰을 때 대기시간을 사용하는데 이 시간을 짧게 줘야한다.
+    - 그렇다고 너무 짧게 주면(약 100ms) Full GC시간을 만들기가 어렵다.  Full GC인 경우 대기하고 있는 모든 스레드가 DB와 연결 못하고 Timeout을 발생시킬 수 있다.
+- Pool의 개수, Wait과 관련된 값이 들어간 값 Timeout 관련된 설정들을 시스템의 상황에 맞게 설정해야 한다.
+
+# WAS 인스턴스 개수 설정
+
+---
+
+- 서버의 WAS 인스턴스 개수를 늘리면 늘릴수록 CPU가 처리해야하는 양이 많아진다.
+- 보통 1~2개의 CPU당 하나의 인스턴스를 지정하는 것이 좋다. 또는 스트레스 테스트를 통해서 구하는 것이 바람직하다.
+- 인스턴스를 늘린다고해서 TPS가 증가하지 않으면 유지보수성만 떨어진다. 배포나 모니터링에 문제가 생긴다.
+
+# Session Timeout 시간 설정
+
+---
+
+- 세션 종료 설정을 적절하게 해놔야한다.
