--- a/Story 16/JVM은 도대체 어떻게 구동될까?/김선우.md
+++ b/Story 16/JVM은 도대체 어떻게 구동될까?/김선우.md
@@ -1,29 +1,32 @@
 # 간략한 내용정리
 
-@ GC에 대하여...
-- GC를 많이 하면 할수록 응답 시간에 많은 영향을 끼친다.
-- 자신이 만든 자바 프로그램의 성능을 생각하는 자바 엔지니어라면, GC가 어떻게 처리 되는지 기본 지식은 갖고 있는 것이 좋다.
-- 자바에서는 메모리르 GC라는 알고리즘을 통하여 관리하기 때문에, 개발자가 메모리를 처리하기 위한 로직을 만들 필요가 없고, 절대로 만들어서는 안된다.
-- Garbage Collection는 말 그대로 쓰레기를 정리하는 작업이다.
-- 자바에서 쓰레기는 객체이다. 
-- 하나의 객체는 메모리를 점유하고, 필요하지 않으면 메모리에서 해제되어야 한다.
+@ Hot Spot VM
+- 자바를 만든 Sun에서, 자바의 성능을 개선위해서 -> JIT컴파일러를 만들고, 이름을 HotSpot으로 지음
+- 세가지 컴포넌트 -> VM 런타임, JIT 컴파일러, 메모리 관리자
 
-@ 자바에서 사용하는 메모리 영역 
-- PC 레지스터, JVM 스택, 힙, 메서드 영역, 런타임 상수 풀, 네이티브 메서드 스택
-- GC가 발생하는 부분이 바로 힙 영역이다.
-- 자바의 메모리 영역은 'Heap 메모리'와 'Non-heap 메모리'로 나뉜다.
 
-@ Heap 메모리 
-- 클래스 인스턴스, 배열이 이 메모리에 쌓인다.
-- 공유 메모리 라고도 불리며 여러 스레드에서 공유하는 데이터들이 저장되는 메모리이다.
+@ VM이 시작될 때의 절차
+1. java 명령어 줄에 있는 옵션 파싱
+2. 자바 힙 크기 할당 및 JIT 컴파일러 타입 지정
+3. CLASSPATH와 LD_LIBRARY_PATH 같은 환경 변수 지정
+4. 자바의 Main 클래스가 지정되지 않았으면 Jar 파일의 manifest파일에서 Main클래스를 확인한다.
+5. JNI의 표준 API인 JNI_CreateJavaVM을 사용하여 새로 생성한 non-primordial이라는 스레드에서 HotSpot VM을 생성한다.
+6. HotSpot VM이 생성되고 초기화되면, Main 클래스가 로딩된 런처에서는 main()메서드 속성 정보를 읽는다.
+7. CallStaticVoidMethod는 네이티브 인터페이스를 불러 HotSpot VM에 있는 main() 메서드가 수행된다. 이때 자바 실행 시 Main클래스 뒤에 있는 값들이 전달된다.
 
-@ Non-heap 메모리 
-- 자바의 내부 처리를 위해서 필요한 영역이다.
-- Heap 영역과 메서드 영역은 JVM이 시작될 때 생성된다.
+
+@ JVM이 종료될 때의 절차
+1. JVM이 시작할 때 오류가 있어 시작을 중지할 때나, JVM에 심각한 에러가 있어서 중지할 필요가 있을 때는 DestroyJavaVM이라는 메서드를 HotSpot 런처에서 호출한다.
+2. HotSpot VM의 종료는 다음의 DestroyJavaVM 메서드의 종료 절차를 따른다.
+    - HotSpot VM 작동중인 상황에서 단 하나의 데몬이 아닌 스레드가 수행될 떄까지 대기한다.
+    - java.lang 패키지에 있는 shutdown클래스의 shutdown()메서드가 수행된다. → 자바 레벨의 shutdown hook이 수행되고 → finalization-on-exit이라는 값이 true일 경우에 자바 객체 finalizer를 수행한다
+    - HotSpot VM레벨의 shutdown hook을 수행함으로써 HotSpot VM의 종료를 준비한다.  이 작업은 JVM_OnExit()메서드를 통해서 저장된다. 그리고 HotSpot VM의 스레드들을 종료시킨다 → 이 작업들이 종료되면 JVMTI를 비활성화 하며, signal 스레드를 종료시킨다.
 
 
 # 느낀점
-- 알맞은 GC 방식을 우리가 개발한 시스템에 적용하는 정도가 바람직하고 따로 GC를 개발하거나 GC 방식을 외울 필요는 없을것 같다.
+- 챕터 제목이 'JVM은 도대체 어떻게 구동될까?' 라고 해서 관심있게 초반부분을 읽고 있었지만, 몇장을 넘기니까 점점 '뭔소리야..' 하게 되었다.
+- 저자가 끝에 말했던 것 처럼 용어들도 복잡하고 내용들이 쉽지만은 않았다.
+- 좌절하지 않고 좀 더 시니어한 개발자가 되었을 때는 이해되었으면 좋겠다.
 
 
 
